# solid-snake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README  README.md  main.c  snake.js
game/: drawing.js  location.js  snake.js
game/assets/shaders/: shared.vert  test.frag  test.vert
game/assets/styles/: snake.json
lib/glad/: glad.c  glad.h  khrplatform-LICENSE.txt  khrplatform.h
lib/linmath/: LICENSE
src/: drawing.c  drawing.h  main.c
src/engine/: main.c
src/engine/entity/: entity.c  entity.h  manager.c  manager.h
src/engine/entity/definitions/: triangle.c  triangle.h
src/engine/graphics/: quadmesh.c  quadmesh.h  screen.c  shader.c  shader.h  style.c  style.h  texture.c  texture.h  vulkan.c  vulkan.h
src/engine/graphics/vulkan/: commandpool.c  commandpool.h  config.c  config.h  debug.c  debug.h  framebuffer.c  framebuffer.h  locking.c  locking.h  memory.c  memory.h  pipeline.c  pipeline.h  query.c  query.h  queues.c  queues.h  shader.c  shader.h  surface.c  surface.h  swapchain.c  swapchain.h  vulkan.c  vulkan.h  window.c  window.h  wrappers.h
src/engine/graphics/vulkan/commands/: buffer.c  buffer.h  pool.c  pool.h  render.c  render.h
src/engine/graphics/vulkan/materials/: material.c  material.h
src/engine/graphics/vulkan/memory/: buffer.c  buffer.h  ibuffer.c  ibuffer.h  memory.c  memory.h  vbuffer.c  vbuffer.h
src/engine/graphics/vulkan/shaders/: shader.c  shader.h  vbuffer.c  vbuffer.h
src/engine/graphics/wrappers/: vulkan_debugging.h
src/engine/scripting/: callbacks.c  interface.c  interface.h  script.h
src/engine/util/: bits.h  dict.c  dict.h  files.c  files.h  llist.c  llist.h
src/engine/util/hashing/: crc.c  crc.h
src/game/assets/shaders/: agumon.frag  agumon.vert  apple.frag  shared.vert  vt.geom  vt.vert
src/game/assets/styles/: apple.json  test.json
src/graphics/: quadmesh.c  quadmesh.h  screen.h  shader.c  shader.h  style.c  style.h  texture.c
src/scripting/: callbacks.c  callbacks.h  importhistory.c  importhistory.h  interface.c  interface.h  script.h
src/util/: files.c  files.h  llist.c  llist.h
